# CodeCrew

./: .gitignore  Memory_Architecture.md  README.md  project_requirements.txt  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
output/: TicTacToe.py  TicTacToe_design.md  app.py  code_and_output.txt  test_TicTacToe
src/code_monkeys/: crew.py  hierarchical_crew.py  main.py
src/code_monkeys/config/: agents.yaml  tasks.yaml
src/code_monkeys/flows/: __init__.py  engineering_flow.py
src/financial_researcher/: crew.py  main.py
src/financial_researcher/config/: agents.yaml  tasks.yaml
src/output/: Armis Security - projected stock value_report.md  Armis Security_report.md  CYBERARK_report.md
