[project]
name = "code_monkeys"
version = "0.1.0"
description = "code_monkeys using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
code_monkeys = "code_monkeys.main:run"
run_crew = "code_monkeys.main:run"
train = "code_monkeys.main:train"
replay = "code_monkeys.main:replay"
test = "code_monkeys.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
